# quensulting

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: health.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  booking.py
backend/app/core/: config.py
backend/app/schemas/: booking.py
backend/app/services/: booking.py  email.py  google_sheets.py
backend/tests/: verify.py
docs/: ARCHITECTURE.md  CONVERSATION_ARCHITECTURE.md  FAQ_DATASET.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_CONTEXT.md  RETELL_EDGE_CASES.md  RETELL_FLOW_SPECIFICATION.md  RETELL_NODE_MAP.md  RETELL_NODE_PROMPTS.md  RETELL_TEST_CASES.md  RETELL_VARIABLES.md  RETELL_WEBHOOK_SPEC.md  ROADMAP.md  SERVICE_CATALOG.md
