[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quensulting-ai-voice-agent"
version = "0.1.0"
description = "AI Receptionist Voice Agent for a dental clinic using RetellAI Conversation Flow"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lead Software Engineer", email = "engineer@quensulting.ai" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "gspread>=6.0.0",
    "google-auth>=2.0.0"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
